--- a/src/shared/Iy.Microservices.EntityFrameworkCore/Iy.Microservices.EntityFrameworkCore.csproj
+++ b/src/shared/Iy.Microservices.EntityFrameworkCore/Iy.Microservices.EntityFrameworkCore.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Iy.Microservices.Core\Iy.Microservices.Core.csproj" />
+    </ItemGroup>
+
 </Project>
